[tool.poetry]
name = "pygame-sandbox"
version = "0.1.0"
description = ""
authors = ["AleksCr <sashapolarear@gmail.com>"]
readme = "README.md"
packages = [{include = "pygame_sandbox"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.3.0"
tmx = "^1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
